# Safe-Energetics

./: .gitignore  README.md  all_devices_git_pull.bash  all_devices_initial_setup.bash  git_pull.bash  initial_setup.bash  test_launcher_testbed_small.bash  test_launcher_testbed_small_virtual.bash
src/testbed/fanuc_m20id35_support/: CMakeLists.txt  package.xml
src/testbed/fanuc_m20id35_support/launch/: display_urdf.launch  gazebo_urdf.launch  load_m20id35.launch  m20id35_visualize.rviz  test_m20id35.launch  urdf.rviz
src/testbed/fanuc_m20id35_support/meshes/m20id35/collision/: link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src/testbed/fanuc_m20id35_support/meshes/m20id35/visual/: base_link.STL  link_6.STL
src/testbed/fanuc_m20id35_support/urdf/: fanuc_common_colours.xacro  fanuc_common_materials.xacro  fanuc_m20id35_support.csv  fanuc_m20id35_support.urdf  m20id35.xacro  m20id35_base_link_geometry.xacro  m20id35_base_link_inertial.xacro  m20id35_base_link_visual.xacro  m20id35_link_1_geometry.xacro  m20id35_link_1_inertial.xacro  m20id35_link_1_visual.xacro  m20id35_link_2_geometry.xacro  m20id35_link_2_inertial.xacro  m20id35_link_2_visual.xacro  m20id35_link_3_geometry.xacro  m20id35_link_3_inertial.xacro  m20id35_link_3_visual.xacro  m20id35_link_4_geometry.xacro  m20id35_link_4_inertial.xacro  m20id35_link_4_visual.xacro  m20id35_link_5_geometry.xacro  m20id35_link_5_inertial.xacro  m20id35_link_5_visual.xacro  m20id35_link_6_geometry.xacro  m20id35_link_6_inertial.xacro  m20id35_link_6_visual.xacro  m20id35_macro.xacro
(+146 files in other folders)
